# copper-lang

./: .gitignore  Cargo.toml  INSTALL.md  README.md  _properties.kson  build.bat  build.rs  cforge.kson  cleanup.bat  diagnose.bat  install-mac.sh  install.bat  install.sh  main.crs  properties.kson  test_only.crs  test_simple.kson
.github/workflows/: build.yml  ci.yml  release.yml
lson/linux/: lson
src/: main.rs
src/cforge/: fetch.rs  kson.rs  mod.rs  properties.rs  vprint.rs
src/models/: cforge.kmodel
src/parser/: mod.rs  result.rs  scope.rs  scope_manager.rs  utils.rs
src/parser/class/: field.rs  generic.rs  method.rs  mod.rs
src/tokenizer/: kind.rs  mod.rs  tokenizer.rs  tokens.rs
src/utils/: class.rs  consumed.rs  crate_extractor.rs  data_formats.rs  mod.rs  null.rs  parsed_command.rs
std/: import.crs
