[package]
name = "copper-lang"
version = "0.0.1-pre-alpha"
edition = "2021"
build = "build.rs"
authors = ["Liy", "Copper Authors"]

[dependencies]
colored = "2.1.0"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
