[package]
name = "copper-lang"
version = "0.0.1-pre-alpha"
edition = "2021"
build = "build.rs"
authors = ["Liy", "Copper Authors"]

[dependencies]
clap = "4.5.34"
colored = "2.1.0"
once_cell = "1.19.0"
regex = "1.10.5"
reqwest = "0.12.5"
serde = { version = "1.0.226", features = ["serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.9.7"
quick-xml = "0.38.3"
walkdir = "2.5.0"
ai_copper = { git = "https://github.com/CopperRS/ai_copper.git" }