[package]
name = "copper-lang"
version = "0.0.1-pre-alpha"
edition = "2021"
build = "build.rs"
authors = ["Liy", "Copper Authors"]

[[bin]]
name = "cforge"
path = "src/main.rs"

[dependencies]
clap = "4.5.48"
colored = "3.0.0"
once_cell = "1.21.3"
regex = "1.11.2"
reqwest = "0.12.23"
serde = { version = "1.0.226", features = ["serde_derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
quick-xml = "0.38.3"
walkdir = "2.5.0"
